[package]
name = "ospfd"
version = "0.1.0"
edition = "2021"
description = "OSPFv2 + OSPFv3 daemon that programs VPP FIB via ribd"
license = "AGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
vpp-api = { git = "https://github.com/justindthomas/vpp-api" }
ribd-proto = { git = "https://github.com/justindthomas/ribd" }
ribd-client = { git = "https://github.com/justindthomas/ribd" }
ribd-routemap = { git = "https://github.com/justindthomas/ribd" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
ipnet = "2"
nix = { version = "0.29", features = ["net", "socket"] }
async-trait = "0.1"
libc = "0.2"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
serde_json = "1"

[[bin]]
name = "ospfd"
path = "src/main.rs"

# Local development overrides: if the sibling repos are checked out
# alongside this one (../vpp-api, ../ribd), use them in place of the
# git sources above. Harmless to anyone cloning just this repo —
# Cargo only consults `[patch]` entries whose paths resolve locally.
[patch."https://github.com/justindthomas/vpp-api"]
vpp-api = { path = "../vpp-api" }

[patch."https://github.com/justindthomas/ribd"]
ribd-proto = { path = "../ribd/ribd-proto" }
ribd-client = { path = "../ribd/ribd-client" }
ribd-routemap = { path = "../ribd/ribd-routemap" }
